--- a/src/SWI.SoftStock.ServerApps.DataAccess.Common2/SWI.SoftStock.ServerApps.DataAccess.Common2.csproj
+++ b/src/SWI.SoftStock.ServerApps.DataAccess.Common2/SWI.SoftStock.ServerApps.DataAccess.Common2.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.8" />
   </ItemGroup>
 
 </Project>
