--- a/src/SWI.SoftStock.ServerApps.MailSender/SWI.SoftStock.ServerApps.MailSender.csproj
+++ b/src/SWI.SoftStock.ServerApps.MailSender/SWI.SoftStock.ServerApps.MailSender.csproj
@@ -2,11 +2,11 @@
   
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>   
+    <TargetFramework>net6.0</TargetFramework>   
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="NETCore.MailKit" Version="2.0.3" />
+    <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
   </ItemGroup>
   
   <ItemGroup>
