--- a/src/SWI.SoftStock.ServerApps.WebApplicatinServices/SWI.SoftStock.ServerApps.WebApplicationServices.csproj
+++ b/src/SWI.SoftStock.ServerApps.WebApplicatinServices/SWI.SoftStock.ServerApps.WebApplicationServices.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentDateTime" Version="2.0.0" />
-    <PackageReference Include="log4net" Version="2.0.11" />
+    <PackageReference Include="FluentDateTime" Version="2.1.0" />
+    <PackageReference Include="log4net" Version="2.0.15" />
   </ItemGroup>
 
   <ItemGroup>
