--- a/src/SWI.SoftStock.ServerApps.WebApplicationModel/SWI.SoftStock.ServerApps.WebApplicationModel.csproj
+++ b/src/SWI.SoftStock.ServerApps.WebApplicationModel/SWI.SoftStock.ServerApps.WebApplicationModel.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.8" />
   </ItemGroup>
 
   <ItemGroup>
