--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,15 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+    - name: Preparing variables
+      id: variables
+      run: |
+        VERSION=${{ steps.version.outputs.major }}.${{ steps.version.outputs.minor }}.${{ steps.version.outputs.patch }}-${{ github.run_number }}
+        IMAGE_NAME="${{ steps.login-ecr.outputs.registry }}/samstarter-webapi:$VERSION"
+        echo "::set-output name=version::$(echo $VERSION)"
+        echo "::set-output name=image-name::$(echo $IMAGE_NAME)"
+        echo "::set-output name=git-tag::$(git describe --tags --abbrev=0)"
+      shell: bash      
     - name: Build
       uses: docker/build-push-action@v2
       with:
