--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,9 +46,9 @@ jobs:
     - name: Build
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./../..
         push: true
-        file: ${{ github.workspace }}/Dockerfile
+        file: ${{ github.workspace }}/src/SWI.SoftStock.WebApi.IIS2/Dockerfile
         tags: ${{ steps.variables.outputs.image-name }}
     - name: Tag commit
       run: |
