--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
       with:
         task-definition: task-definition.json
         container-name: samstarter-webapi
-        image: steps.variables.outputs.image-name
+        image: ${{ steps.variables.outputs.image-name }}
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
